ogrencikayit/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ogrenci-kayit
  labels:
    name: ogrenci-kayit
